Codigo con indicadores

--- a/Codigos/prueba_state.ipynb
+++ b/Codigos/prueba_state.ipynb
@@ -13,12 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window_size = 10\n",
+    "data = pd.read_parquet('resultadoIndicadores.parquet')\n",
+    "data = data.drop(['EMA_5','EMA_63', 'EMA_63', 'WMA_63', 'MINUS_DM','PLUS_DI', 'AD', 'WMA_5'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
-    "  return 1 / (1 + math.exp(-x))\n",
+    "  return 1 / (1 + np.exp(-x))\n",
     "\n",
     "\n",
     "def state_creator(data, timestep, window_size):\n",
@@ -37,51 +48,36 @@
     "  for i in range(window_size - 1):\n",
     "    # Normalize the difference from current day and the next day\n",
     "    # Because the prices can be very different and we want them on same scale\n",
-    "    state.append(sigmoid(windowed_data[0][i+1] - windowed_data[0][i]))\n",
+    "    state.append(sigmoid(windowed_data[i+1] - windowed_data[i]))\n",
     "    \n",
     "  return np.array([state])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_size = 10\n",
-    "data = pd.read_parquet('resultadoIndicadores.parquet')\n",
-    "data = data.drop(['EMA_5','EMA_63', 'EMA_63', 'WMA_63', 'MINUS_DM','PLUS_DI', 'AD', 'WMA_5'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jesus\\AppData\\Local\\Temp\\ipykernel_4068\\3239670712.py:21: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  state.append(sigmoid(windowed_data[0][i+1] - windowed_data[0][i]))\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 10 is out of bounds for axis 0 with size 10",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Jesus\\Github\\Material_Tec\\Codigos\\prueba_state.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m state_creator(data, \u001b[39m0\u001b[39;49m, \u001b[39m11\u001b[39;49m)\n",
-      "\u001b[1;32mc:\\Users\\Jesus\\Github\\Material_Tec\\Codigos\\prueba_state.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Iterate trough whole windowed_data minus current state (-1)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(window_size \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m   \u001b[39m# Normalize the difference from current day and the next day\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m   \u001b[39m# Because the prices can be very different and we want them on same scale\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m   state\u001b[39m.\u001b[39mappend(sigmoid(windowed_data[\u001b[39m0\u001b[39;49m][i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m-\u001b[39m windowed_data[\u001b[39m0\u001b[39m][i]))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Jesus/Github/Material_Tec/Codigos/prueba_state.ipynb#X30sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([state])\n",
-      "File \u001b[1;32mc:\\Users\\Jesus\\miniconda3\\envs\\talib\\lib\\site-packages\\pandas\\core\\series.py:1037\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1027\u001b[0m \u001b[39mif\u001b[39;00m is_integer(key) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39m_should_fallback_to_positional:\n\u001b[0;32m   1028\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   1029\u001b[0m         \u001b[39m# GH#50617\u001b[39;00m\n\u001b[0;32m   1030\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSeries.__getitem__ treating keys as positions is deprecated. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1035\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m   1036\u001b[0m     )\n\u001b[1;32m-> 1037\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_values[key]\n\u001b[0;32m   1039\u001b[0m \u001b[39melif\u001b[39;00m key_is_scalar:\n\u001b[0;32m   1040\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_value(key)\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 10 is out of bounds for axis 0 with size 10"
-     ]
-    }
-   ],
-   "source": [
-    "state_creator(data, 0, 11)"
+    "def state_creator(data, timestep, window_size):\n",
+    "  \n",
+    "  # starting day of our state\n",
+    "  starting_id = timestep - window_size + 1\n",
+    "  \n",
+    "  if starting_id >= 0:\n",
+    "    windowed_data = data[starting_id:timestep+1]\n",
+    "  else:\n",
+    "    # Replicate member (data[0]) needed times\n",
+    "    windowed_data = - starting_id * [data[0]] + list(data[0:timestep+1])\n",
+    "    \n",
+    "  state = []\n",
+    "  # Iterate trough whole windowed_data minus current state (-1)\n",
+    "  for i in range(window_size - 1):\n",
+    "    # Normalize the difference from current day and the next day\n",
+    "    # Because the prices can be very different and we want them on same scale\n",
+    "    state.append(sigmoid(windowed_data[i+1] - windowed_data[i]))\n",
+    "    \n",
+    "  return np.array([state])"
    ]
   },
   {
@@ -116,6 +112,161 @@
     "    state.append(sigmoid(data['ADX'][i+1] - data['ADX'][i]))\n",
     "\n",
     "np.array([state])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_state = state_creator(data=data, timestep=(t + 1), window_size=(9 + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.68992291, 0.36041518, 0.48326228, 0.50613504, 0.57766267,\n",
+       "        0.51177573, 0.76287913, 0.44332014, 0.31945996, 0.2632473 ]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid(data.iloc[-1 + 1:0 +1, 0:10].values - data.iloc[+:1 + 1, 0:10].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(1, 1, 0, 10), dtype=float64)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time = 0\n",
+    "window_size = 10\n",
+    "\n",
+    "state = []\n",
+    "state.append(sigmoid(data.iloc[time:time + 1, :10].values - data.iloc[time -1 :time, :10].values))\n",
+    "\n",
+    "    \n",
+    "np.array([state])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 1.        , 1.        , 1.        , 1.        ,\n",
+       "        1.        , 1.        , 1.        , 0.99999996, 1.        ]])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid(data.iloc[time:time + 1, :10].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestemp = 15\n",
+    "window_size = 10 # Numero de indicadores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def state_indicador_creator(data, timestemp, window_size):\n",
+    "\n",
+    "    state = []\n",
+    "    if timestemp == 0:\n",
+    "        state.append(sigmoid(data.iloc[0:1, :window_size].values - data.iloc[0:1, :window_size].values))\n",
+    "    else:\n",
+    "        state.append(sigmoid(data.iloc[timestemp:timestemp + 1, :window_size].values - data.iloc[timestemp -1 :timestemp, :window_size].values))\n",
+    "\n",
+    "    return np.array([state])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[0.25194034, 0.74347938, 0.51979271, 0.62482017, 0.67782139,\n",
+       "          0.6243827 , 0.80184812, 0.29270485, 0.32418882, 0.37890178]]]])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_indicador_creator(data, timestemp, window_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state.append(sigmoid(data.iloc[time:time + 1, :10].values - data.iloc[time -1 :time, :10].values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid(data.iloc[0:1, :10].values - data.iloc[0:1, :10].values)"
    ]
   },
   {
